crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_default_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (trace "operand" in (con (list data) [(I 42)])) of
  DataI wrong#11 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_12
    (force
      [[[[[[(force (builtin chooseData)) generated_12]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
    [(builtin listData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#2 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#3 : Data = listData anf#2 in
case@Data anf#3 of
  DataI wrong#1 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_9
      [(lam partial_10
        [(lam anf_4
          [(lam anf_5
            [(lam generated_8
              (force
                [[[[[[builtin_9 generated_8] (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]
                  (delay (force [[builtin_7 (con string "wrong")] (delay (error))]))]
                  (delay (force [partial_10 (delay (con integer 9))]))]))
              anf_5])
            [(builtin listData) anf_4]])
          (force [[builtin_7 (con string "operand")] (delay (con (list data) [(I 42)]))])])
        [builtin_7 (con string "fallback")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#14 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#15 : Data = listData anf#14 in
case@Data anf#15 of
  DataI wrong#11 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- isolated folded Core
let anf#14 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#15 : Data = listData anf#14 in
trace "fallback" in 9
--- isolated cleaned Core
let anf#14 : list Data = trace "operand" in (con (list data) [(I 42)]) in
let anf#15 : Data = listData anf#14 in
trace "fallback" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_14
    [(lam anf_15
      [(lam generated_16
        (force
          [[[[[[(force (builtin chooseData)) generated_16]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
        anf_15])
      [(builtin listData) anf_14]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con (list data) [(I 42)]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_14
    [(lam anf_15
      (force
        [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))
      [(builtin listData) anf_14]])
    (force
      [[(force (builtin trace)) (con string "operand")]
        (delay (con (list data) [(I 42)]))])])
--- result
(con integer 9)
--- logs
["operand", "fallback"]
