crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list data) []) of
  DataList payload#13 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_14
    (force
      [[[[[[(force (builtin chooseData)) generated_14] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list data) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list data) []) in
(con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list data) [])) [(builtin listData) (con (list data) [])]])
--- isolated pass
--- isolated ANF input
let anf#14 : Data = listData (con (list data) []) in
case@Data anf#14 of
  DataList payload#13 -> (con (list data) [])
--- isolated folded Core
let data_operand#15 : list Data = (con (list data) []) in
let anf#14 : Data = listData data_operand#15 in
let payload#13 : list Data = data_operand#15 in
(con (list data) [])
--- isolated cleaned Core
let anf#14 : Data = listData (con (list data) []) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_14
    [(lam generated_15
      (force
        [[[[[[(force (builtin chooseData)) generated_15] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_14])
    [(builtin listData) (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_14 (con (list data) [])) [(builtin listData) (con (list data) [])]])
--- result
(con (list data) [])
--- logs
[]
