crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list data) []) of
  DataList payload#16 -> payload#16
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_17
    (force
      [[[[[[(force (builtin chooseData)) generated_17] (delay (error))] (delay (error))]
        (delay [(lam payload_16 payload_16) [(builtin unListData) generated_17]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list data) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list data) []) in
case@Data anf#2 of
  DataList payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin listData) (con (list data) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#17 : Data = listData (con (list data) []) in
case@Data anf#17 of
  DataList payload#16 -> payload#16
--- isolated folded Core
let data_operand#18 : list Data = (con (list data) []) in
let anf#17 : Data = listData data_operand#18 in
let payload#16 : list Data = data_operand#18 in
payload#16
--- isolated cleaned Core
let data_operand#18 : list Data = (con (list data) []) in
let anf#17 : Data = listData data_operand#18 in
data_operand#18
--- isolated UPLC before
(program 1.1.0
  [(lam anf_17
    [(lam generated_18
      (force
        [[[[[[(force (builtin chooseData)) generated_18] (delay (error))] (delay (error))]
          (delay [(lam payload_16 payload_16) [(builtin unListData) generated_18]])]
          (delay (error))]
          (delay (error))]))
      anf_17])
    [(builtin listData) (con (list data) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_18
    [(lam anf_17 data_operand_18) [(builtin listData) data_operand_18]])
    (con (list data) [])])
--- result
(con (list data) [])
--- logs
[]
