crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_invalid_delay_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (delay (\x#39 : int -> x#39)) of
  DataList unused#52 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_53
    (force
      [[[[[[(force (builtin chooseData)) generated_53]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin listData) (delay (lam x_39 x_39))]])
--- optimized Core
let anf#3 : Data = listData (delay (\x#1 : int -> x#1)) in
9
--- optimized UPLC
(program 1.1.0
  [(lam anf_4 (con integer 9)) [(builtin listData) (delay (lam x_2 x_2))]])
--- isolated pass
--- isolated ANF input
let anf#53 : Data = listData (delay (\x#39 : int -> x#39)) in
case@Data anf#53 of
  DataList unused#52 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#54 : @delay (int -> int) = delay (\x#39 : int -> x#39) in
let anf#53 : Data = listData data_operand#54 in
let unused#52 : @delay (int -> int) = data_operand#54 in
9
--- isolated cleaned Core
let anf#53 : Data = listData (delay (\x#39 : int -> x#39)) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_53
    [(lam generated_54
      (force
        [[[[[[(force (builtin chooseData)) generated_54]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_53])
    [(builtin listData) (delay (lam x_39 x_39))]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_53 (con integer 9)) [(builtin listData) (delay (lam x_39 x_39))]])
--- result
error: NotAConstant(Delay(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)) }, Empty))
--- logs
[]
