crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_invalid_delay_fallback_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (delay (\x#39 : int -> x#39)) of
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_40
    (force
      [[[[[[(force (builtin chooseData)) generated_40]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin listData) (delay (lam x_39 x_39))]])
--- optimized Core
let anf#2 : Data = listData (delay (\x#1 : int -> x#1)) in
case@Data anf#2 of
  _ -> trace "unreachable" in 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam builtin_7
      [(lam partial_8
        [(lam anf_4
          [(lam generated_6
            (force
              [[[[[[builtin_7 generated_6] (delay (force [partial_8 (delay (con integer 0))]))]
                (delay (force [partial_8 (delay (con integer 0))]))]
                (delay (force [partial_8 (delay (con integer 0))]))]
                (delay (force [partial_8 (delay (con integer 0))]))]
                (delay (force [partial_8 (delay (con integer 0))]))]))
            anf_4])
          [(builtin listData) (delay (lam x_3 x_3))]])
        [builtin_5 (con string "unreachable")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#56 : Data = listData (delay (\x#39 : int -> x#39)) in
case@Data anf#56 of
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#57 : @delay (int -> int) = delay (\x#39 : int -> x#39) in
let anf#56 : Data = listData data_operand#57 in
trace "unreachable" in 0
--- isolated cleaned Core
let anf#56 : Data = listData (delay (\x#39 : int -> x#39)) in
trace "unreachable" in 0
--- isolated UPLC before
(program 1.1.0
  [(lam anf_56
    [(lam generated_57
      (force
        [[[[[[(force (builtin chooseData)) generated_57]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_56])
    [(builtin listData) (delay (lam x_39 x_39))]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_56
    (force
      [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))
    [(builtin listData) (delay (lam x_39 x_39))]])
--- result
error: NotAConstant(Delay(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)) }, Empty))
--- logs
[]
