crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_invalid_function_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (\x#39 : int -> x#39) of
  DataList unused#46 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_47
    (force
      [[[[[[(force (builtin chooseData)) generated_47]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin listData) (lam x_39 x_39)]])
--- optimized Core
let anf#3 : Data = listData (\x#1 : int -> x#1) in
case@Data anf#3 of
  DataList unused#2 -> 9
  _ -> trace "unreachable" in 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_9
      [(lam partial_10
        [(lam anf_5
          [(lam generated_8
            (force
              [[[[[[builtin_9 generated_8] (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (con integer 9))]
                (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (force [partial_10 (delay (con integer 0))]))]))
            anf_5])
          [(builtin listData) (lam x_4 x_4)]])
        [builtin_7 (con string "unreachable")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#47 : Data = listData (\x#39 : int -> x#39) in
case@Data anf#47 of
  DataList unused#46 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#48 : int -> int = \x#39 : int -> x#39 in
let anf#47 : Data = listData data_operand#48 in
let unused#46 : int -> int = data_operand#48 in
9
--- isolated cleaned Core
let anf#47 : Data = listData (\x#39 : int -> x#39) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_47
    [(lam generated_48
      (force
        [[[[[[(force (builtin chooseData)) generated_48]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_47])
    [(builtin listData) (lam x_39 x_39)]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_47 (con integer 9)) [(builtin listData) (lam x_39 x_39)]])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Empty })
--- logs
[]
